--- a/style.css
+++ b/style.css
@@ -3,3 +3,56 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    font-family: sans-serif;
+}
+
+
+.container {
+    max-width: 80%;
+    margin: 0 auto;
+    padding-top: 50px;
+}
+
+/* #region header */
+
+.header {
+    display: flex;
+    justify-content: space-between;
+
+    h1 {
+        font-size: 50px;
+        line-height: 1;
+    }
+
+    p {
+        font-size: 14px;
+        color: gray;
+    }
+}
+
+
+.toggle {
+    font-size: large;
+    display: flex;
+    align-items: center;
+
+    span {
+        color: gray;
+    }
+
+    
+}
+
+.toggle i {
+    margin-left: 4px;
+    font-size: 25px;
+}
+
+.toggle span:nth-of-type(2) {
+    margin-left: 20px;
+}
+
+
+/* #endregion header */
